Le javascript est orienté objet et propre

--- a/client/style.css
+++ b/client/style.css
@@ -9,6 +9,7 @@
 	display: block;
 	border: 1px solid #000; 
 	height: 100%;
+	padding: 0px !important;
 	min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
   min-height: 100vh; /* These two lines are counted as one :-)       */
 
