--- a/client/style.css
+++ b/client/style.css
@@ -13,7 +13,7 @@
 	height: 100%;
 	padding: 0px !important;
 	min-height: 100%;  
-  min-height: 100vh;
+  	min-height: 100vh;
 }
 .upload_image{
 	margin: auto;
@@ -90,9 +90,6 @@
 	vertical-align: middle;
 }
 
-.change_base_icon ul{
-	list-style-type: none;
-}
 
 .change_base_icon span{
 	font-size: 0.8em;
@@ -100,16 +97,37 @@
 }
 
 .container_option_base {
-	text-align: center;
+	position: absolute;
+	right: 25%;
 }
 
 .field {
 	height: 40px;
+	text-align: right;
 }
 .field_modification_base{
 	display: flex;
 	flex-direction:column;
 	align-item: center;
+
 }
+
+.buttonPrevious{
+	margin-top: 10px;
+	margin-left: 0px;
+} 
+
+.buttonNext {
+	margin:10px;
+	position: absolute;
+	right: 10px;
+}
+
+.container_right{
+	display: none;
+}
+
+
+
 
 
