--- a/client/style.css
+++ b/client/style.css
@@ -123,11 +123,25 @@
 	right: 10px;
 }
 
-.container_right{
-	display: none;
+.small-canvas{
+	margin: auto;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	position: relative;
+	width: 50%;
+  padding-bottom: 50%;
+  overflow:hidden;
 }
-
-
+.content {
+    position:absolute;
+    margin: auto;
+    height:100%;
+    width:100%;
+}
+#small_canvas{
+	width: 100%;
+	height: 100%;
+}
 
 
 
