--- a/client/style.css
+++ b/client/style.css
@@ -97,8 +97,16 @@
 }
 
 .container_option_base {
-	position: absolute;
-	right: 25%;
+	text-align: center;
+}
+
+#title_modif {
+
+}
+
+#valid_option {
+	font-size: 50px;
+
 }
 
 .field {
@@ -106,6 +114,8 @@
 	text-align: right;
 }
 .field_modification_base{
+	position: absolute;
+	right: 25%;
 	display: flex;
 	flex-direction:column;
 	align-item: center;
@@ -142,6 +152,8 @@
 	width: 100%;
 	height: 100%;
 }
+
+
 
 
 
