--- a/client/css/style.css
+++ b/client/css/style.css
@@ -119,13 +119,13 @@ body {
 
 .right_up{
 	width: 100%;
-	min-height: 65%;
+	margin-bottom: 5vh;
 }
 
 .right_down{
 	border-top: solid 2px #e7e7e7;
 	flex:1;
-	height: 35%;
+	overflow: auto;
 }
 
 #canvas{
@@ -212,8 +212,8 @@ body {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	position: relative;
-	width: 50%;
-  padding-bottom: 50%;
+	width: 25vh;
+  padding-bottom: 25vh;
   overflow:hidden;
 }
 .content {
@@ -255,7 +255,6 @@ body {
 	padding: 0 !important;
 	width: 100%;
 	height: 100%;
-	overflow: scroll;
 }
 .right_down ul li{
 	list-style: none;
