--- a/client/css/style.css
+++ b/client/css/style.css
@@ -239,7 +239,8 @@ body {
 }
 .input-group{
 	float: left !important;
-	padding-left: 15px !important;
+	padding-left: 5px !important;
+	margin-bottom: 8px;
 }
 .input-group-btn:last-child > .form-control {
   margin-left: -1px;
@@ -303,4 +304,45 @@ body {
 }
 .modal-backdrop {
    background-color: white;
+}
+
+.spinner {
+  width: 100px;
+}
+.spinner input {
+  text-align: right;
+}
+.input-group-btn-vertical {
+  position: relative;
+  white-space: nowrap;
+  width: 1%;
+  vertical-align: middle;
+  display: table-cell;
+}
+.input-group-btn-vertical > .btn {
+  display: block;
+  float: none;
+  width: 100%;
+  max-width: 100%;
+  padding: 8px;
+  margin-left: -1px;
+  position: relative;
+  border-radius: 0;
+}
+.input-group-btn-vertical > .btn:first-child {
+  border-top-right-radius: 4px;
+}
+.input-group-btn-vertical > .btn:last-child {
+  margin-top: -2px;
+  border-bottom-right-radius: 4px;
+}
+.input-group-btn-vertical i{
+  position: absolute;
+  top: 0;
+  left: 4px;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
