--- a/client/css/style.css
+++ b/client/css/style.css
@@ -230,8 +230,10 @@ body {
 	min-width: 150px;
 }
 .input-group{
+  width: 70%;
 	float: left !important;
-	padding-left: 5px !important;
+	padding-left: 0 !important;
+  padding-right: 15px !important;
 	margin-bottom: 8px;
 }
 .input-group-btn:last-child > .form-control {
@@ -297,9 +299,13 @@ body {
 .modal-backdrop {
    background-color: white;
 }
+.row{
+  margin-right: 0px !important;
+  margin-left: 0px !important;
 
+}
 .spinner {
-  width: 100px;
+  width: 100%;
 }
 .spinner input {
   text-align: right;
